--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,9 @@
 						{{ xsrf_form_html() }}
 					</td>
 					</tr>
+					<tr>
+					<td>Ограничение: 1 сообщение раз в 10 секунд</td>
+					</tr>
 				</table>
 			</form>
 		</div>
